Infinity scroll 적용

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="vmMain"
-            type="com.afterwork.mypaging.MainViewModel" />
+            type="com.afterwork.mypaging.viewmodel.MainViewModel" />
     </data>
     <RelativeLayout
         android:layout_width="match_parent"
