--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    <data>
-        <variable
-            name="vmMain"
-            type="com.afterwork.mypaging.viewmodel.MainViewModel" />
-    </data>
-    <RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_margin="10dp">
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_refresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:refreshing="@{vmMain.refreshing}"
-            app:onRefreshListener="@{()-> vmMain.onRefreshing()}">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-<!--                app:viewModel="@{vmMain}"-->
-<!--                app:ogqContents="@{vmMain.items}"/>-->
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-    </RelativeLayout>
-</layout>
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="Infinity Scroll - Network Only"
+        android:textSize="16dp"
+        android:textColor="@color/colorPrimaryDark"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/scrollListener"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:text="Scroll Listener"
+        android:textSize="12dp"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/itemKeyPaging"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:text="Paging: ItemKey"
+        android:textSize="12dp"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/pageKeyPaging"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:text="Paging: PageKey"
+        android:textSize="12dp"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/positionalPaging"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:text="Paging: Positional"
+        android:textSize="12dp"/>
+</LinearLayout>
