--- a/app/src/main/res/layout/activity_paging.xml
+++ b/app/src/main/res/layout/activity_paging.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="vmItemKey"
-            type="com.afterwork.mypaging.viewmodel.ItemKeyPagingViewModel" />
+            name="vmPaging"
+            type="com.afterwork.mypaging.viewmodel.PagingViewModel" />
     </data>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,14 +14,15 @@
             android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:refreshing="@{vmItemKey.refreshing}"
-            app:onRefreshListener="@{()-> vmItemKey.onRefreshing()}">
+            app:refreshing="@{vmPaging.refreshing}"
+            app:onRefreshListener="@{()-> vmPaging.onRefreshing()}">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+                app:spanCount="2"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </RelativeLayout>
 </layout>
