--- a/app/src/main/res/layout/activity_scrolllistener.xml
+++ b/app/src/main/res/layout/activity_scrolllistener.xml
@@ -21,7 +21,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="2"
                 app:viewModel="@{vmScroll}"
                 app:ogqContents="@{vmScroll.items}"/>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
