--- a/app/src/main/res/layout/item_ogqcontent.xml
+++ b/app/src/main/res/layout/item_ogqcontent.xml
@@ -9,13 +9,13 @@
     </data>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_height="wrap_content">
         <com.facebook.drawee.view.SimpleDraweeView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center_vertical"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
             android:background="@color/colorPrimary"
+            android:scaleType="centerCrop"
             thumbnailImage="@{item.images}"/>
         <TextView
             android:id="@+id/tv_title"
@@ -23,7 +23,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
             emptyTitle="@{item.title}"
-            android:textSize="14dp"/>
+            android:textSize="14dp"
+            android:visibility="gone"/>
         <TextView
             android:id="@+id/tv_info"
             android:layout_width="wrap_content"
@@ -35,7 +36,8 @@
             likes="@{item.likes_count}"
             downloads="@{item.downloads_count}"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="12dp"/>
+            android:textSize="12dp"
+            android:visibility="gone"/>
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="wrap_content"
@@ -44,6 +46,7 @@
             android:layout_marginTop="5dp"
             android:layout_below="@id/tv_info"
             android:text="@{item.description}"
-            android:textSize="10dp"/>
+            android:textSize="10dp"
+            android:visibility="gone"/>
     </RelativeLayout>
 </layout>
